changed window videoMode

--- a/Assets/Files/map.in
+++ b/Assets/Files/map.in
@@ -1,13 +1,14 @@
-xxxxxxxxxxxxxxxxxxxxxxxxx
-x...oo..............oo..x
-x.x.x.x.x.x.x.x.x.x.x.x.x
-x.......................x
-x.x.x.xox.x.x.x.x.x.xox.x
-x........oooo...........x
-x.x.x.x.x.x.xox.x.x.x.x.x
-x.............o...ooo...x
-x.x.x.x.x.x.x.x.x.x.x.x.x
-x...........ooooo.......x
-x.x.x.x.x.x.x.x.x.x.x.x.x
-x............oooo.......x
-xxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxx
+x...oo..............oo...x
+x.x.x.x.x.x.x.x.x.x.x.x..x
+x........................x
+x.x.x.xox.x.x.x.x.x.xox..x
+x........oooo............x
+x.x.x.x.x.x.xox.x.x.x.x..x
+x.............o...ooo....x
+x.x.x.x.x.x.x.x.x.x.x.x..x
+x...........ooooo........x
+x.x.x.x.x.x.x.x.x.x.x.x..x
+x............oooo........x
+x............oooo........x
+xxxxxxxxxxxxxxxxxxxxxxxxxx
