player can move

--- a/Boomer.vcxproj.filters
+++ b/Boomer.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClInclude Include="Animation.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Direction.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
