--- a/Boomer.vcxproj
+++ b/Boomer.vcxproj
@@ -137,6 +137,7 @@
   <ItemGroup>
     <ClInclude Include="Animation.h" />
     <ClInclude Include="Constants.h" />
+    <ClInclude Include="Direction.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="World.h" />
   </ItemGroup>
