--- a/Assets/Files/map.in
+++ b/Assets/Files/map.in
@@ -1,14 +1,13 @@
-xxxxxxxxxxxxxxxxxxxxxxxxxx
-x...oo..............oo...x
-x.x.x.x.x.x.x.x.x.x.x.x..x
-x........................x
-x.x.x.xox.x.x.x.x.x.xox..x
-x........oooo............x
-x.x.x.x.x.x.xox.x.x.x.x..x
-x.............o...ooo....x
-x.x.x.x.x.x.x.x.x.x.x.x..x
-x...........ooooo........x
-x.x.x.x.x.x.x.x.x.x.x.x..x
-x............oooo........x
-x............oooo........x
-xxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxx
+x...oo..............oo..x
+x.x.x.x.x.x.x.x.x.x.x.x.x
+x.......................x
+x.x.x.xox.x.x.x.x.x.xox.x
+x........oooo...........x
+x.x.x.x.x.x.xox.x.x.x.x.x
+x.............o...ooo...x
+x.x.x.x.x.x.x.x.x.x.x.x.x
+x...........ooooo.......x
+x.x.x.x.x.x.x.x.x.x.x.x.x
+x............oooo.......x
+xxxxxxxxxxxxxxxxxxxxxxxxx
