skeleton walks ( without collision )

--- a/Boomer.vcxproj
+++ b/Boomer.vcxproj
@@ -136,6 +136,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Animation.cpp" />
+    <ClCompile Include="DeadWalker.cpp" />
+    <ClCompile Include="Direction.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="World.cpp" />
@@ -143,6 +145,7 @@
   <ItemGroup>
     <ClInclude Include="Animation.h" />
     <ClInclude Include="Constants.h" />
+    <ClInclude Include="DeadWalker.h" />
     <ClInclude Include="Direction.h" />
     <ClInclude Include="MatPos.h" />
     <ClInclude Include="Player.h" />
