--- a/Boomer.vcxproj
+++ b/Boomer.vcxproj
@@ -139,6 +139,7 @@
     <ClCompile Include="DeadWalker.cpp" />
     <ClCompile Include="Direction.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MathUtils.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="World.cpp" />
   </ItemGroup>
@@ -147,6 +148,7 @@
     <ClInclude Include="Constants.h" />
     <ClInclude Include="DeadWalker.h" />
     <ClInclude Include="Direction.h" />
+    <ClInclude Include="MathUtils.h" />
     <ClInclude Include="MatPos.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="World.h" />
