dead walker is ready

--- a/Assets/Files/map.in
+++ b/Assets/Files/map.in
@@ -1,7 +1,7 @@
 xxxxxxxxxxxxxxxxxxxxxxxxx
 x.......................x
-x.x.x.x.x.x.x.x.x.x.x.x.x
-x.......................x
+x.x.xox.x.x.x.x.x.x.x.x.x
+x...o.o.................x
 x.x.x.x.x.x.x.x.x.x.x.x.x
 x.......................x
 x.x.x.x.x.x.x.x.x.x.x.x.x
