--- a/Assets/Files/map.in
+++ b/Assets/Files/map.in
@@ -1,13 +1,13 @@
-xxxxxxxxxxxxxxxxxxxxxxxxx
-x.......................x
-x.x.xox.x.x.x.x.x.x.x.x.x
-x...o.o.................x
-x.x.x.x.x.x.x.x.x.x.x.x.x
-x.......................x
-x.x.x.x.x.x.x.x.x.x.x.x.x
-x.......................x
-x.x.x.x.x.x.x.x.x.x.x.x.x
-x.......................x
-x.x.x.x.x.x.x.x.x.x.x.x.x
-x.......................x
-xxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxx
+x........................x
+x.x.xox.x.x.x.x.x.x.x.x..x
+x...o.o..................x
+x.x.x.x.x.x.x.x.x.x.x.x..x
+x........................x
+x.x.x.x.x.x.x.x.x.x.x.x..x
+x........................x
+x.x.x.x.x.x.x.x.x.x.x.x..x
+x........................x
+x.x.x.x.x.x.x.x.x.x.x.x..x
+x........................x
+xxxxxxxxxxxxxxxxxxxxxxxxxx
