playerAi has stay animation and he can stay if he is surrounded

--- a/Assets/Files/map.in
+++ b/Assets/Files/map.in
@@ -1,13 +1,5 @@
-xxxxxxxxxxxxxxxxxxxxxxxxxx
-x........................x
-x.x.xox.x.x.x.x.x.x.x.x..x
-x...o.o..................x
-x.x.x.x.x.x.x.x.x.x.x.x..x
-x........................x
-x.x.x.x.x.x.x.x.x.x.x.x..x
-x........................x
-x.x.x.x.x.x.x.x.x.x.x.x..x
-x........................x
-x.x.x.x.x.x.x.x.x.x.x.x..x
-x........................x
-xxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxx
+x......x.x
+x......xxx
+x........x
+xxxxxxxxxx
