--- a/Boomer.vcxproj.filters
+++ b/Boomer.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="BombsManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="BasePlayer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Constants.h">
@@ -78,6 +81,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="BombsManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BasePlayer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
