--- a/Boomer.vcxproj.filters
+++ b/Boomer.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="BasePlayer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="BombPlayer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Constants.h">
@@ -84,6 +87,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="BasePlayer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BombPlayer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
