--- a/Boomer.vcxproj
+++ b/Boomer.vcxproj
@@ -155,6 +155,10 @@
     <ClInclude Include="BombPlayer.h" />
     <ClInclude Include="BombsManager.h" />
     <ClInclude Include="Constants.h" />
+    <ClInclude Include="Constants\BombConst.h" />
+    <ClInclude Include="Constants\DeadWalkerConst.h" />
+    <ClInclude Include="Constants\PlayerConst.h" />
+    <ClInclude Include="Constants\WorldConst.h" />
     <ClInclude Include="DeadWalker.h" />
     <ClInclude Include="Direction.h" />
     <ClInclude Include="MathUtils.h" />
