created an enum for suprises checked if got a surprise, therfore got one, indentify what surprise is and print what surprise is

--- a/Boomer.vcxproj
+++ b/Boomer.vcxproj
@@ -165,6 +165,7 @@
     <ClInclude Include="PlayerAI.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="SurprisesManager.h" />
+    <ClInclude Include="SurpriseType.h" />
     <ClInclude Include="World.h" />
   </ItemGroup>
   <ItemGroup>
