--- a/Boomer.vcxproj.filters
+++ b/Boomer.vcxproj.filters
@@ -107,6 +107,9 @@
     <ClInclude Include="SurprisesManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SurpriseType.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Boomer.rc">
