--- a/Boomer.vcxproj
+++ b/Boomer.vcxproj
@@ -135,6 +135,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Arrow.cpp" />
     <ClCompile Include="BasePlayer.cpp" />
     <ClCompile Include="Bomb.cpp" />
     <ClCompile Include="BombPlayer.cpp" />
@@ -152,6 +153,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animation.h" />
+    <ClInclude Include="Arrow.h" />
     <ClInclude Include="BasePlayer.h" />
     <ClInclude Include="Bomb.h" />
     <ClInclude Include="BombPlayer.h" />
