--- a/Boomer.vcxproj
+++ b/Boomer.vcxproj
@@ -155,6 +155,7 @@
   <ItemGroup>
     <ClInclude Include="Animation.h" />
     <ClInclude Include="Arrow.h" />
+    <ClInclude Include="Constants\ArrowConst.h" />
     <ClInclude Include="BasePlayer.h" />
     <ClInclude Include="Bomb.h" />
     <ClInclude Include="BombPlayer.h" />
